--- a/Memory/Memory Badger.csproj
+++ b/Memory/Memory Badger.csproj
@@ -14,7 +14,7 @@
     <Company>Badger Cave Development</Company>
     <Title>Memory Badger</Title>
     <AssemblyVersion></AssemblyVersion>
-    <Version>$(VersionPrefix)0.2.0-PreRelease</Version>
+    <Version>$(VersionPrefix)1.0.0-Beta.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
